--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                  <div class="text-center me-auto my-3 crypto-iphone-wrapper"> 
                 <img src="assets/img/usdt.png" alt=""/>
               </div>
-              <a href="https://postimg.cc/YjNwrj7b" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span>
+              <a href="https://postimg.cc/YjNwrj7b" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
             </div>
           </div>
     </section>
