--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/alifi.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/Alifi.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>ALIFI RWA Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
@@ -652,7 +652,7 @@
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
-              <div class="pic"><img src="assets/img/team/alicia.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/Alicia.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>ALICIA Creative Industri Project Developer <a href="https://aliri.org/" class="details-link" title="WAVES Anonymous Group"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
