--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/Alifi.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>ALIFI RWA Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
+                <h4>ALIFI RWA Finance Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager to Implementation Real Sector Partnership Project</p>
                 <div class="social">
@@ -672,7 +672,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/03.matic.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Plax Research Defi Labs <a href="https://plaxswap.io" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
+                <h4>Plax Blockchain Technology Research<a href="https://plaxswap.io" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
                 <span>CTO Technology Development (POL Blockchain Alliance) </span><br>
                 <p>Blockchain Support for Implementation Polygon Technology</p>
                 <div class="social">
