--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
           </div>
 
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/p2p.png");' data-aos="zoom-in" data-aos-delay="150" >&nbsp; </div> 
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/blockchain.png");' width=500% data-aos="zoom-in" data-aos-delay="150" >&nbsp; </div> 
         </div>
 
       </div>
@@ -562,7 +562,7 @@
               <div class="text-center me-auto my-3 crypto-iphone-wrapper">
                 <img src="assets/img/idrt.png" alt="" />
               </div>
-              <a href="https://postimg.cc/QBRqVp5P" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
+              <a href="https://bashify.io/i/CSM2eJ" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
             </div>
           </div>
 
@@ -595,11 +595,11 @@
                 <a href="">Polygon Network ✅<span class="details-link" title="USDT (Polygon Network) Contract" style="color: #ff914d"></i></a></span><br><br>
                 
                 MIN (BELI) :<span style="color: #ffffff"> <br>
-                  <a href="https://postimg.cc/YjNwrj7b">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
+                  <a href="https://bashify.io/i/CSM2eJ">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
                  <div class="text-center me-auto my-3 crypto-iphone-wrapper"> 
                 <img src="assets/img/usdt.png" alt=""/>
               </div>
-              <a href="https://postimg.cc/YjNwrj7b" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
+              <a href="https://bashify.io/i/CSM2eJ" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
             </div>
           </div>
     </section>
@@ -696,7 +696,7 @@
 
         <div class="row">
           <div class="col-lg-6 d-flex align-items-center" data-aos="fade-right" data-aos-delay="100">
-            <img src="assets/img/xxx.png" class="img-fluid" alt="">
+            <img src="assets/img/aliri-defi.png" width=200% class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-delay="100">
             <div class="py-5">
@@ -1110,7 +1110,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <script>document.write(new Date().getFullYear())</script> <strong><span>CLABS Support For Paymatic by (P2P) Service</span></strong>. All Rights Reserved
+        &copy; Copyright <script>document.write(new Date().getFullYear())</script> <strong><span>ALIRI VIP For Support Community Development Program</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
