--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
 
           </div>
 
-          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/blockchain.png");' width=500% data-aos="zoom-in" data-aos-delay="150" >&nbsp; </div> 
+          <div class="col-lg-5 align-items-stretch order-1 order-lg-2 img" style='background-image: url("assets/img/blockchain.png");' data-aos="zoom-in" data-aos-delay="150" >&nbsp; </div> 
         </div>
 
       </div>
@@ -1014,27 +1014,27 @@
             <p class="pt-4">Given the enormous wealth creation from cryptocurrency</p>
           </div> 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/ccf.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Alicia.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/crf.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/Alifi.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/sme.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/ALIRI LOGO(NEW).png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/crevo.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/basu.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/plax.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/clabs.png" class="img-fluid" alt="">
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="assets/img/clients/pay.png" class="img-fluid" alt="">
+            <img src="assets/img/clients/cpoin.png" class="img-fluid" alt="">
           </div>
 
         </div>
@@ -1067,7 +1067,7 @@
             <a href="#hero" class="logo me-auto"><img src="assets/img/ALIRI LOGO(NEW).png" alt="" class="img-fluid" style="width:70px;"></a>
             <p>
               <br>
-              CLABS For PayMatic Support 
+              ALIRI-VIP, Success Without Reason.! 
             </p>
           </div>
 
@@ -1092,8 +1092,8 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Connect us on</h4>
             <p>
-              <strong>Phone:</strong> +62 8222 14409 97<br>
-              <strong>Email:</strong> <a href="mailto:support@rfidr.net">support@cryptopreneur.community</a><br>
+              <strong>Phone:</strong> +6282348061562 <br>
+              <strong>Email:</strong> <a href="mailto:support@aliri.vip">support@aliri.vip</a><br>
             </p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
