--- a/index.html
+++ b/index.html
@@ -624,10 +624,10 @@
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager ALIRI Community Development Program</p>
                 <div class="social">
-                  <a href="#"><i class="ri-twitter-fill"></i></a>
-                  <a href="#"><i class="ri-facebook-fill"></i></a>
-                  <a href="#"><i class="ri-instagram-fill"></i></a>
-                  <a href="#"> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://polygonscan.com/token/0x058E73a591FF67ed31D92679db27950eb2546ca1#code"><i class="ri-draft-line"></i></a>
+                  <a href="https://bashify.io/i/t0Yrpz"><i class="ri-qr-code-line"></i></a>
+                  <a href="#"><i class="ri-telegram-line"></i></a>
+                  <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
               </div>
             </div>
@@ -635,16 +635,16 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="assets/img/team/Alifi.png" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="#" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>ALIFI RWA Finance Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager to Implementation Real Sector Partnership Project</p>
                 <div class="social">
-                  <a href="#"><i class="ri-twitter-fill"></i></a>
-                  <a href="#"><i class="ri-facebook-fill"></i></a>
-                  <a href="#"><i class="ri-instagram-fill"></i></a>
-                  <a href="#"> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="https://polygonscan.com/token/0x38e009e25A3B6459345e9c07B93ea41E05AC0990#code"><i class="ri-draft-line"></i></a>
+                  <a href="assets/img/team/Alifi.png"><i class="ri-qr-code-line"></i></a>
+                  <a href="#"><i class="ri-telegram-line"></i></a>
+                  <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
               </div>
             </div>
@@ -658,10 +658,10 @@
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager to Implementation Creative Industry Project</p>
                 <div class="social">
-                  <a href="#"><i class="ri-twitter-fill"></i></a>
-                  <a href="#"><i class="ri-facebook-fill"></i></a>
-                  <a href="#"><i class="ri-instagram-fill"></i></a>
-                  <a href="#"> <i class="ri-linkedin-box-fill"></i></a>
+                  <a href="https://polygonscan.com/token/0x1b6e0561f053830e34349111af458dc130937928#code"><i class="ri-draft-line"></i></a>
+                  <a href="https://bashify.io/i/NHK97b"><i class="ri-qr-code-line"></i></a>
+                  <a href="#"><i class="ri-telegram-line"></i></a>
+                  <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
               </div>
             </div>
@@ -676,10 +676,10 @@
                 <span>CTO Technology Development (POL Blockchain Alliance) </span><br>
                 <p>Blockchain Support for Implementation Polygon Technology</p>
                 <div class="social">
-                  <a href="#"><i class="ri-twitter-fill"></i></a>
-                  <a href="#"><i class="ri-facebook-fill"></i></a>
-                  <a href="#"><i class="ri-instagram-fill"></i></a>
-                  <a href="#"> <i class="ri-linkedin-box-fill"></i> </a>
+                  <a href="#"><i class="ri-draft-line"></i></a>
+                  <a href="#"><i class="ri-qr-code-line"></i></a>
+                  <a href="#"><i class="ri-telegram-line"></i></a>
+                  <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
               </div>
             </div>
