--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
               <div class="text-center me-auto my-3 crypto-iphone-wrapper">
                 <img src="assets/img/idrt.png" alt="" />
               </div>
-              <a href="https://bashify.io/i/CSM2eJ" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
+              <a href="https://bashify.io/i/bLYu0Z" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
             </div>
           </div>
 
@@ -592,14 +592,14 @@
               <p>Presale Price : USDT 0.10 <br>
                 PAY USE    :<span style="color: #00ff5f"> Tether USD  </span><span class="details-link" title="Tether USD" style="color: #ff914d"><a href="https://tether.to/en/"><i class="bx bx-link"></i></a></span><br><br>
                 USDT Contract ID  :<br>
-                <a href="">Polygon Network ✅<span class="details-link" title="USDT (Polygon Network) Contract" style="color: #ff914d"></i></a></span><br><br>
+                <a href="https://polygonscan.com/token/0xc2132d05d31c914a87c6611c10748aeb04b58e8f">Polygon Network ✅<span class="details-link" title="USDT (Polygon Network) Contract" style="color: #ff914d"></i></a></span><br><br>
                 
                 MIN (BELI) :<span style="color: #ffffff"> <br>
-                  <a href="https://bashify.io/i/CSM2eJ">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
+                  <a href="https://bashify.io/i/Od6DQ1">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
                  <div class="text-center me-auto my-3 crypto-iphone-wrapper"> 
                 <img src="assets/img/usdt.png" alt=""/>
               </div>
-              <a href="https://bashify.io/i/CSM2eJ" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
+              <a href="https://bashify.io/i/Od6DQ1" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
             </div>
           </div>
     </section>
