--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
-              <div class="pic"><img src="#" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/Alifi.png" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>ALIFI RWA Finance Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
@@ -672,8 +672,8 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/03.matic.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>Plax Blockchain Technology Research<a href="https://plaxswap.io" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
-                <span>CTO Technology Development (POL Blockchain Alliance) </span><br>
+                <h4>Plax Blockchain Technology Research <a href="https://plaxswap.io" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
+                <span>CTO Blockchain Technology Development </span><br>
                 <p>Blockchain Support for Implementation Polygon Technology</p>
                 <div class="social">
                   <a href="#"><i class="ri-draft-line"></i></a>
