--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
               <div class="text-center me-auto my-3 crypto-iphone-wrapper">
                 <img src="assets/img/idrt.png" alt="" />
               </div>
-              <a href="https://bashify.io/i/bLYu0Z" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
+              <a href="https://sites.google.com/view/aliri-blockchain-tech/aliri-package" class="buy-btn"> <span style="color: #dc3545"><b> <strong> SEND IDRT </strong> </b></span></a>
             </div>
           </div>
 
@@ -595,11 +595,11 @@
                 <a href="https://polygonscan.com/token/0xc2132d05d31c914a87c6611c10748aeb04b58e8f">Polygon Network ✅<span class="details-link" title="USDT (Polygon Network) Contract" style="color: #ff914d"></i></a></span><br><br>
                 
                 MIN (BELI) :<span style="color: #ffffff"> <br>
-                  <a href="https://bashify.io/i/Od6DQ1">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
+                  <a href="https://sites.google.com/view/aliri-blockchain-tech/launchpad-presale">100 DOA (USDT 10) ✅<span class="details-link" title="Pembelian Presale ALIRI (DOA)" style="color: #c200c2"></i></a></span><br><br>
                  <div class="text-center me-auto my-3 crypto-iphone-wrapper"> 
                 <img src="assets/img/usdt.png" alt=""/>
               </div>
-              <a href="https://bashify.io/i/Od6DQ1" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
+              <a href="https://sites.google.com/view/aliri-blockchain-tech/launchpad-presale" class="buy-btn"><span style="color: #004b49"><b> <strong> SEND USDT </strong> </b></span></a>
             </div>
           </div>
     </section>
@@ -625,7 +625,7 @@
                 <p>Project Manager ALIRI Community Development Program</p>
                 <div class="social">
                   <a href="https://polygonscan.com/token/0x058E73a591FF67ed31D92679db27950eb2546ca1#code"><i class="ri-draft-line"></i></a>
-                  <a href="https://bashify.io/i/t0Yrpz"><i class="ri-qr-code-line"></i></a>
+                  <a href="https://sites.google.com/view/aliri-help-center/smart-contract"><i class="ri-qr-code-line"></i></a>
                   <a href="#"><i class="ri-telegram-line"></i></a>
                   <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
@@ -642,7 +642,7 @@
                 <p>Project Manager to Implementation Real Sector Partnership Project</p>
                 <div class="social">
                   <a href="https://polygonscan.com/token/0x38e009e25A3B6459345e9c07B93ea41E05AC0990#code"><i class="ri-draft-line"></i></a>
-                  <a href="assets/img/team/Alifi.png"><i class="ri-qr-code-line"></i></a>
+                  <a href="https://sites.google.com/view/aliri-help-center/smart-contract"><i class="ri-qr-code-line"></i></a>
                   <a href="#"><i class="ri-telegram-line"></i></a>
                   <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
@@ -659,7 +659,7 @@
                 <p>Project Manager to Implementation Creative Industry Project</p>
                 <div class="social">
                   <a href="https://polygonscan.com/token/0x1b6e0561f053830e34349111af458dc130937928#code"><i class="ri-draft-line"></i></a>
-                  <a href="https://bashify.io/i/NHK97b"><i class="ri-qr-code-line"></i></a>
+                  <a href="https://sites.google.com/view/aliri-help-center/smart-contract"><i class="ri-qr-code-line"></i></a>
                   <a href="#"><i class="ri-telegram-line"></i></a>
                   <a href="#"> <i class="ri-twitter-line"></i> </a>
                 </div>
