--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4><a href="https://ibb.co/X2C8LMw"> <img src="assets/img/alpha.png" class="mx-auto d-block" width="91%"></a></h4>
+              <h4><a href="#community"> <img src="assets/img/alpha.png" class="mx-auto d-block" width="91%"></a></h4>
               <h4>SILVER ALPHA<br> (IDR 800.000) </h4>
               <h10<span style="color: #ffff00">ALL FEATURE: IDR 17.170.000 <br>
               <h5<span style="color: #a0a0a0">Pack Affiliate =5% </span></h5><br><br>         
@@ -182,7 +182,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="https://ibb.co/znL69y7"> <img src="assets/img/beta.png" class="mx-auto d-block" width="90%"></a></h4>
+              <h4><a href="#community"> <img src="assets/img/beta.png" class="mx-auto d-block" width="90%"></a></h4>
               <h4>GOLD BETA<br> (IDR 2.500.000) </h4>
               <h10<span style="color: #ffff00">ALL FEATURE: IDR 20.750.000 <br>
               <h5<span style="color: #a0a0a0">Pack Affiliate =6% </span></h5><br><br>         
@@ -263,7 +263,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="https://dogrowth.club/"> <img src="assets/img/gamma.png" class="mx-auto d-block" width="90%"></a></h4>
+              <h4><a href="#community"> <img src="assets/img/gamma.png" class="mx-auto d-block" width="90%"></a></h4>
               <h4>PLATINUM GAMMA<br> (IDR 5.000.000) </h4>
               <h10<span style="color: #ffff00">ALL FEATURE: IDR 27.500.000 <br>
               <h5<span style="color: #a0a0a0">Pack Affiliate =8% </span></h5><br><br>         
@@ -344,7 +344,7 @@
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-layer"></i></div><p></p>
-              <h4><a href="https://www.pinksale.finance/pinklock/create?chain=BSC"> <img src="assets/img/delta.png" class="mx-auto d-block" width="90%"></a></h4>
+              <h4><a href="#community"> <img src="assets/img/delta.png" class="mx-auto d-block" width="90%"></a></h4>
               <h4>FAST TRACK DELTA<br> (IDR 10.000.000) </h4>
               <h10<span style="color: #ffff00">ALL FEATURE: IDR 44.100.000 <br>
               <h5<span style="color: #a0a0a0">Pack Affiliate =10% </span></h5><br><br>         
@@ -637,7 +637,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="200">
               <div class="pic"><img src="assets/img/team/Alifi.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>ALIFI RWA Finance Project Developer <a href="https://aliri.org/" class="details-link" title="PLAX Group Labs"><i class="bx bx-link"></i></a></h4>
+                <h4>ALIFI RWA Finance Project Developer <a href="https://aliri.org/" class="details-link" title="Aliri Finance"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager to Implementation Real Sector Partnership Project</p>
                 <div class="social">
@@ -654,7 +654,7 @@
             <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="300">
               <div class="pic"><img src="assets/img/team/Alicia.png" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>ALICIA Creative Industri Project Developer <a href="https://aliri.org/" class="details-link" title="WAVES Anonymous Group"><i class="bx bx-link"></i></a></h4>
+                <h4>ALICIA Creative Industri Project Developer <a href="https://aliri.org/" class="details-link" title="Aliri Creative Industry"><i class="bx bx-link"></i></a></h4>
                 <span>Co-Founder & Project Developer </span><br>
                 <p>Project Manager to Implementation Creative Industry Project</p>
                 <div class="social">
