--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="https://aliri.org" class="btn-get-started scrollto"><b> Who is behind this project 🚀🚀</b></a>
           </div>
-          <div class="d-flex justify-content-center justify-content-lg-start app-download">
+          <div class="d-flex justify-content-justify justify-content-lg-start app-download">
             <a href="https://polygonscan.com/token/0x058E73a591FF67ed31D92679db27950eb2546ca1" class="me-2">
               <img src="assets/img/ios.png" alt="" />
             </a>
