--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box featured">
-              <h3>ALIRI LAUNCHPAD COMMUNITY <br> ( NON CLASS PACKAGE )</h3>
+              <h3><span style="color: #83ffdc"> ALIRI LAUNCHPAD COMMUNITY <br> ( NON CLASS PACKAGE )</span></h3>
               <p>Presale Price : USDT 0.10 <br>
                 PAY USE    :<span style="color: #00ff5f"> Tether USD  </span><span class="details-link" title="Tether USD" style="color: #ff914d"><a href="https://tether.to/en/"><i class="bx bx-link"></i></a></span><br><br>
                 USDT Contract ID  :<br>
